Change priority for the service from 100 to 55
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/rsaauth/trunk@18662 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2009-04-03  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* The service is working for BE users
+	* Change priority for the service from 100 to 55
 
 2009-03-16  Dmitry Dulepov  <dmitry@typo3.org>
 
