Added a factory for storages
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/rsaauth/trunk@18719 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2009-04-03  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Added a factory for backends
+	* Added a factory for storages
 
 2009-04-03  Dmitry Dulepov  <dmitry@typo3.org>
 
