Fix XCLASS definitions
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/rsaauth/trunk@18942 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2009-04-13  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Added a "split" storage for keys
+	* Fix XCLASS definitions
 
 2009-04-03  Dmitry Dulepov  <dmitry@typo3.org>
 
