Added FE authentication
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/rsaauth/trunk@18944 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Added a "split" storage for keys
 	* Fix XCLASS definitions
+	* Added FE authentication
 
 2009-04-03  Dmitry Dulepov  <dmitry@typo3.org>
 
