Rename publicKey to publicKeyModulus in the keypair class
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/rsaauth/trunk@19610 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Added a method to set an alternative storage to the storage factory
 	* Do not use expired keys in the split storage
+	* Rename publicKey to publicKeyModulus in the keypair class
 
 2009-04-13  Dmitry Dulepov  <dmitry@typo3.org>
 
