Added a configuration check and warnings in the backend if the check fails
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/rsaauth/trunk@19629 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	* Do not use expired keys in the split storage
 	* Rename publicKey to publicKeyModulus in the keypair class
 	* Fixed: wrong unserializaion of the extension configuration
+	* Added a configuration check and warnings in the backend if the check fails
 
 2009-04-13  Dmitry Dulepov  <dmitry@typo3.org>
 
