Added a warning if command line backend is used
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/rsaauth/trunk@19635 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	* Rename publicKey to publicKeyModulus in the keypair class
 	* Fixed: wrong unserializaion of the extension configuration
 	* Added a configuration check and warnings in the backend if the check fails
+	* Added a warning if command line backend is used
 
 2009-04-13  Dmitry Dulepov  <dmitry@typo3.org>
 
