Move login JavaScript addition to a separate hook
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/rsaauth/trunk@19655 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 	* Fixed: wrong unserializaion of the extension configuration
 	* Added a configuration check and warnings in the backend if the check fails
 	* Added a warning if command line backend is used
+	* Move login JavaScript addition to a separate hook
 
 2009-04-13  Dmitry Dulepov  <dmitry@typo3.org>
 
