Updated core patch, fixed some JavaScript errors on the login page
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/rsaauth/trunk@19667 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 	* Added a configuration check and warnings in the backend if the check fails
 	* Added a warning if command line backend is used
 	* Move login JavaScript addition to a separate hook
+	* Updated core patch, fixed some JavaScript errors on the login page
 
 2009-04-13  Dmitry Dulepov  <dmitry@typo3.org>
 
