Increased service priority to make it run before t3sec_saltedpw
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/rsaauth/trunk@19752 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-04-30  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Increased service priority to make it run before t3sec_saltedpw
+
 2009-04-28  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Added a method to set an alternative storage to the storage factory
